# tidy-tree

./: .gitignore  INSTALL.md  README.md  SPECIFICATION.md  main.py  pyproject.toml  standardization_preview.md  test_standardization.py
src/tidy_tree/: __init__.py  standardize_names.py
tests/: __init__.py  test_standardizer.py
