[project]
name = "tidy-tree"
version = "0.1.0"
description = "A command-line tool to standardize file and directory names recursively."
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    # No external dependencies - uses only Python standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
tidy-tree = "tidy_tree.standardize_names:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tidy_tree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
